Corrected small mistakes, user just after registration has 0 notes, too long note text, correct max amount of notes

--- a/Notes Application/NotesAplicationWeb/wwwroot/css/content.css
+++ b/Notes Application/NotesAplicationWeb/wwwroot/css/content.css
@@ -78,6 +78,11 @@
     cursor: text;
 }
 
+.noteText {
+    word-break: break-all;
+    hyphens: auto;
+}
+
 .X {
     width: 40px;
     line-height: 40px;
